syntax = "proto3";
option java_package = "org.kjob.remote.protos";
// req
message CreateJobReq{
  string appName = 1;
  string jobName = 2;
  string jobDescription = 3;
  string jobParams = 4;
  TimeExpressionType timeExpressionType = 5;
  string timeExpression = 6;
  string lifeCycle = 7;
  string processorInfo = 8;
  int32 maxInstanceNum = 9;
}

// 定义 TimeExpressionType 枚举
enum TimeExpressionType {
    CRON = 0;
    FIXED_RATE = 1;
    FIXED_DELAY = 2;
    DAILY_TIME_INTERVAL = 3;
  // 根据具体需求添加其他类型
}


// response
message CreateJobRes{
  int64 jobId = 1;
}